--- a/SGL/Trainning/Main/teste001.html
+++ b/SGL/Trainning/Main/teste001.html
@@ -3,9 +3,15 @@
 <head>
     <title>Page Title</title>
     <style>
-        body {background-color: powderblue;}
-        h1   {color: blue;}
-        p    {color: red;}
+        body{
+            background-color: powderblue;
+        }
+        h1{
+            color: blue;
+        }
+        p{
+            color: red;
+        }
     </style>
     <link rel="stylesheet" href="../styles.css">
 </head>
