--- a/SGL/Trab001DAW/index.html
+++ b/SGL/Trab001DAW/index.html
@@ -12,7 +12,9 @@
     <div class="arquivos"></div>
     <div class="janelas"></div>
     <div class="texto"></div>
-    <div class="display"></div>
+    <div class="display">
+        <h1>Ola</h1>
+    </div>
     <div class="output"></div>
     <div class="sap2"></div>
     <div id="velocity">Velocity</div>
