enfim merge sort

--- a/SGL/Atividade3/index.html
+++ b/SGL/Atividade3/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Implementar o merge sort</h1>
     <h2>Use a biblioteca p5.js</h2>
-    <h2 id="start">Inicial: </h2>
-    <h2 id="end">Fim: </h2>
+    <h2 id="e_a">Inicial: </h2>
+    <h2 id="e_e">Fim: </h2>
     <script src="script.js"></script>
     <!-- <script>
 var nums = [];
