isso é um problema

--- a/SGL/Prova-07072025/certificacoes.html
+++ b/SGL/Prova-07072025/certificacoes.html
@@ -26,7 +26,9 @@
             15hrs/mês
         </div>
         <br>
-        <a href="index.html">Página Inicial</a>
+        <div id="butReturn">
+            <a href="index.html">Página Inicial</a>
+        </div>
     </section>
     
    
