--- a/SGL/Prova-07072025/educacao.html
+++ b/SGL/Prova-07072025/educacao.html
@@ -60,7 +60,9 @@
         </div>
             
         <br>
-        <a href="index.html">Página Inicial</a>
+        <div id="butReturn">
+            <a href="index.html">Página Inicial</a>
+        </div>
     </section>
     
    
