--- a/SGL/Prova-07072025/experiencias.html
+++ b/SGL/Prova-07072025/experiencias.html
@@ -21,7 +21,9 @@
             (simulando ou não) problemas gerais 
             do lugar ou de lugares onde eu poderia estar.
         </div><br>
-        <a href="index.html">Página Inicial</a>
+        <div id="butReturn">
+            <a href="index.html">Página Inicial</a>
+        </div>
     </section>
     
    
