--- a/SGL/Prova-07072025/habilidades.html
+++ b/SGL/Prova-07072025/habilidades.html
@@ -21,7 +21,9 @@
                 </li>
             </ul>
         </div><br>
-        <a href="index.html">Página Inicial</a>
+        <div id="butReturn">
+            <a href="index.html">Página Inicial</a>
+        </div>
     </section>
     
    
