--- a/SGL/Prova-07072025/index.html
+++ b/SGL/Prova-07072025/index.html
@@ -68,11 +68,17 @@
         <div id="item2">
             <a href="https://github.com/SGL314"><h2>GitHub</h2></a>
         </div>
-        <h5 style="text-align: right;">
+        <div id="item2">
+            <a href="mailto:a2023951482@teiacoltec.org">a2023951482@teiacoltec.org</a>
+        </div>
+        <div id="item2" style="margin-left: 200px">
+            <h5 style="text-align: right;">
             Todos direitos reservados<br>
             Samuel G. Lobato<br>
             07/jul/2025
         </h5>
+        </div>
+        
     </section>
 </body>
 </html>
